# simple-direct-delta-encoding

./: Cargo.toml  LICENSE  readme.md
benches/bench_files/: text_1.txt
delta-encoding/: Cargo.toml
delta-encoding/benches/: patching.rs
delta-encoding/src/: data_difference.rs  data_difference_tests.rs  lib.rs  tests.rs
delta-encoding/test_files/: text_3.txt
docs/: error_handler-c09fe927ba73d505.js  index.html  style-e9622d64b6593a70.css  web-page-c0593dc7de98706f.js  web-page-c0593dc7de98706f_bg.wasm
src/: data_difference.rs  data_difference_tests.rs  lib.rs  tests.rs
test_files/: text_diff.txt
web-page/: Cargo.toml  index.html
web-page/public/: error_handler.js  style.css
web-page/src/: main.rs
