[package]
name = "delta-encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dispnet-hash = "0.4.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = { version = "*" }

[[bench]]
name = "patching"
harness = false