[package]
name = "simple-direct-delta-encoding"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = [
    "test_files",
    "benches",
]

[dependencies]
dispnet-hash = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = { version = "1.0" }

[[bench]]
name = "patching"
harness = false
