[package]
name = "web-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
yew-hooks = { version = "*" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "*", features = ["HtmlSelectElement"]}
serde_json = { version = "*" }

simple-direct-delta-encoding = { path = "../delta-encoding" }